--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
 }
